test/scc_test/decl/semantic-errors/031.t
enum
{
    A = 1.0
};